--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "linkdoc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bin/linkdoc",
   "bin": {
     "linkdoc": "./bin/linkdoc"
   },
@@ -15,6 +15,8 @@
     "commander": "^2.16.0",
     "ejs": "^2.6.1",
     "inquirer": "^6.0.0",
-    "mkdirp": "^0.5.1"
+    "minimatch": "^3.0.4",
+    "mkdirp": "^0.5.1",
+    "sorted-object": "^2.0.1"
   }
 }
