--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "commander": "^2.16.0",
     "ejs": "^2.6.1",
     "inquirer": "^6.0.0",
+    "lodash": "^4.17.10",
     "minimatch": "^3.0.4",
     "mkdirp": "^0.5.1",
     "sorted-object": "^2.0.1"
